[package]
name = "ssh-roads"
version = "0.1.0"
edition = "2024"
authors = ["Chang Cheng Kang (Wujidadi, Taras Alatmiuë)"]
license = "MIT"
description = "A lightweight SSH connection manager written in Rust."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
